--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="container">
 <header>
   <nav  id="grisfonce" class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-right">
-    <img class="navbar-brand liengris" href="#" src="integration_maquette_finale/logo.png" alt="FindThePrecious.com">
+    <img class="navbar-brand liengris" src="integration_maquette_finale/logo.png" alt="FindThePrecious.com">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarNav">
@@ -33,7 +33,7 @@
     </div>
   </nav>
 </header>
-<section id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active align-middle">
       <img class="d-block w-100 " src="integration_maquette_finale/dark_vador-recarde.jpg" alt="First slide">
@@ -86,7 +86,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</section>
+</div>
 
 <main >
 
